Filter multiselect and Shift roster bug fixed

--- a/src/app/pages/pages.component.css
+++ b/src/app/pages/pages.component.css
@@ -117,7 +117,7 @@
     }
 }
 
-/* @media only screen and (max-width:520px) {
+@media only screen and (max-width:520px) {
     .bodyPart {
         margin-top: 25%;
     }
@@ -148,7 +148,7 @@
     .bodyPart {
         margin-top: 40%;
     }
-} */
+}
 
 .menu {
     background-color: #757575;
