--- a/src/app/pages/sub-admin/roster-shifts/roster-shifts.component.css
+++ b/src/app/pages/sub-admin/roster-shifts/roster-shifts.component.css
@@ -106,12 +106,16 @@
     display: none;
 }
 @media only screen and (max-width: 600px) {
-    .WebView{
+    .webView{
         display: none
     }
     .mobileView{
         display: block;
         padding-top: 0px;
         padding-bottom: 0px;
+    }
+    .mvWidth{
+        width: 33%;
+        text-align: center;
     }
 }
